# Ai_search

./: .gitignore  COMPLETION_REPORT.txt  CONTRIBUTING.md  FILE_STRUCTURE.txt  GITHUB_UPLOAD.md  IMPROVEMENTS.md  INSTALL.md  LICENSE  PACKAGE_READY.md  PROJECT_SUMMARY.txt  PUBLISH.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  setup.py  start_app.py
.github/workflows/: tests.yml
backend/: .env.example  config.py  decision_engine.py  main.py  query_processor.py  requirements.txt  result_synthesizer.py  search_orchestrator.py  test_search.py  test_searx.py
backend/engines/: __init__.py  brave.py  duckduckgo.py  google.py  qwant.py  searxng.py  wikidata.py  wikipedia.py
frontend/: hologram.js  index.html  script.js  styles.css
