[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai-search"
version = "1.0.0"
description = "AI-powered multi-engine search system with intelligent result synthesis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Davood", email = "davood121@gmail.com"}
]
keywords = ["ai", "search", "fastapi", "multi-engine", "websocket", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.1",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "ddgs>=7.0.1",
    "wikipedia>=1.4.0",
    "SPARQLWrapper>=2.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=4.9.3",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Davood121/Ai_search"
Repository = "https://github.com/Davood121/Ai_search.git"
"Bug Tracker" = "https://github.com/Davood121/Ai_search/issues"
Documentation = "https://github.com/Davood121/Ai_search#readme"

[project.scripts]
nexus-search = "start_app:main"

[tool.setuptools]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
